--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+html{
+  height: 100vh;
+  background-color: black;
+  color: white;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root{
+  height: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ortala{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+
+button{
+  padding: 20px;
+  margin-top: 12px;
+  border: 0;
+  width: 100%;
+  margin: auto;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:nth-child(1){
+  background-color: red;
+}
+button:nth-child(2){
+  background-color: orange;
+  width: 95%;
+}
+button:nth-child(3){
+  background-color: yellow;
+  width: 90%;
+}
+button:nth-child(4){
+  background-color: green;
+  width: 85%;
+}
+button:nth-child(5){
+  background-color: darkblue;
+  width: 80%;
+}
+button:nth-child(6){
+  background-color: blue;
+  width: 75%;
+}
+button:nth-child(7){
+  background-color: purple;
+  width: 70%;
 }
