--- a/src/App.css
+++ b/src/App.css
@@ -13,18 +13,17 @@ html{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  gap: 20px;
 }
 
 
 button{
   padding: 20px;
-  margin-top: 12px;
   border: 0;
   width: 100%;
-  margin: auto;
   cursor: pointer;
   color: black;
-  font-size: 35px;
+  font-size: 15px;
 }
 
 button:nth-child(1){
